--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,110 @@
+/* 480px, 768px, 1024px */
+
+@media only screen and (min-width: 320px) {
+  a {
+    font-size: 14px;
+  }
+
+  h1 {
+    font-size: 28px;
+  }
+
+  .splash .header {
+    max-width: 300px;
+  }
+
+  .about .profile-image-container {
+    padding: 40px 0 20px 0;
+  }
+
+  .about .profile-image {
+    height: 200px;
+    width: 200px;
+    background-size: 200px;
+  }
+
+  .about .description {
+    width: 80%;
+    font-size: 14px;
+  }
+
+  .projects .row {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .projects img {
+    height: 300px;
+    width: 300px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  a {
+    font-size: 24px;
+  }
+
+  h1 {
+    font-size: 32px;
+  }
+
+  .splash .header {
+    max-width: 500px;
+  }
+
+  .about .description {
+    width: 50%;
+    font-size: 24px;
+  }
+
+  .projects .row {
+    display: block;
+  }
+
+  .projects img {
+    height: 200px;
+    width: 200px;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  a {
+    font-size: 24px;
+  }
+  
+  h1 {
+    font-size: 48px;
+  }
+
+  .splash .header {
+    max-width: 700px;
+  }
+
+  .about .profile-image-container {
+    padding: 40px 20px;
+  }
+
+  .about .profile-image {
+    height: 300px;
+    width: 300px;
+    background-size: 300px;
+  }
+
+  .about .description {
+    width: 50%;
+    font-size: 28px;
+  }
+
+  .projects .row {
+    display: block;
+  }
+
+  .projects img {
+    height: 250px;
+    width: 250px;
+  }
+}
+
 html, body {
   font-family: Avenir !important;
   margin: 0;
@@ -37,12 +144,16 @@ a {
 }
 
 .splash .header {
-  max-width: 600px;
+
 }
 
 .about {
-  height: calc(100vh - 100px);
-  padding-top: 100px;
+  height: 100vh;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .about .header {
@@ -57,24 +168,18 @@ a {
 }
 
 .about .profile-image-container {
-  padding: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .about .profile-image {
-  height: 300px;
-  width: 300px;
   border-radius: 50%;
   background-image: url("../images/profile-pic.jpg");
-  background-size: 300px;
 }
 
 .about .description {
   color: #4A4A4A;
-  min-width: 200px;
-  max-width: 400px;
   padding: 20px;
 
   display: flex;
@@ -95,9 +200,6 @@ a {
 }
 
 .projects img {
-  height: 150px;
-  width: 150px;
-
   margin: 5px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
