--- a/src/css/index.css
+++ b/src/css/index.css
@@ -14,7 +14,6 @@
   }
 
   .about {
-    height: 75vh !important;
     padding-top: 40px;
   }
 
@@ -55,6 +54,10 @@
 
   .splash .header {
     max-width: 500px;
+  }
+
+  .about {
+    height: auto !important;
   }
 
   .about .profile-image {
@@ -206,7 +209,7 @@ a {
 }
 
 .projects {
-  padding: 40px;
+  padding: 40px 40px 120px 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
